# Magic-research

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  reload_pdfs.py  requirements-dev.txt  requirements.txt  setup.py
data/: README.md
docs/images/: README.md
src/magic_research/: __init__.py  __main__.py  web_app.py
src/magic_research/data/: __init__.py  loader.py  preprocessor.py  vectordb.py
src/magic_research/models/: __init__.py  model.py
src/magic_research/templates/: index.html
